# ai_study_platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  check.ps1  dev.ps1  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup-local.ps1
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260625_0001_initial_schema.py
app/: __init__.py  auth.py  celery_app.py  config.py  database.py  dependencies.py  graph.py  graph_human_loop.py  main.py  redis_client.py  state.py  tasks.py
app/agents/: __init__.py  assessment.py  common.py  interview.py  opensource_mentor.py  planner.py  reporter.py  supervisor.py  tutor.py
app/api/: __init__.py  auth.py  learning_coach.py
app/mcp/: __init__.py  filesystem_client.py  github_client.py  tool_registry.py
app/models/: __init__.py  coach.py  user.py
app/schemas/: __init__.py  contracts.py  learning_coach.py
app/services/: __init__.py  coach_memory.py  llm.py  observability.py  storage.py
docs/: ENGINEERING.md  ENGINEERING_ROADMAP.md  architecture.md  interview_design_qna.md
frontend/vue/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/vue/src/: App.vue  style.css
frontend/vue/src/services/: api.ts
tests/: test_coach_memory.py  test_learning_coach.py  test_observability.py  test_storage_isolation.py
